// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GlobalEntityMetadata get should return metadata for TestRelationFive 1`] = `
{
  "columns": [
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "name",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "string",
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": [Function],
      "key": "manyId",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "uuid",
    },
    {
      "decorator": "PrimaryKeyColumn",
      "enum": null,
      "fallback": [Function],
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "uuid",
    },
    {
      "decorator": "CreateDateColumn",
      "enum": null,
      "fallback": [Function],
      "key": "createdAt",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "date",
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": "TestRelationFive",
    "namespace": null,
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "primaryKeys": [
    "id",
  ],
  "primarySource": null,
  "relations": [
    {
      "findKeys": {
        "testRelationFiveManyId": "manyId",
      },
      "foreignConstructor": [Function],
      "foreignKey": "fives",
      "joinKeys": {
        "testRelationFiveManyId": "manyId",
      },
      "joinTable": "test_relation_one_x_test_relation_five",
      "key": "ones",
      "options": {
        "loading": "ignore",
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "type": "ManyToMany",
    },
  ],
  "schemas": [],
  "target": [Function],
}
`;

exports[`GlobalEntityMetadata get should return metadata for TestRelationFour 1`] = `
{
  "columns": [
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "name",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "string",
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "customFourId",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "string",
    },
    {
      "decorator": "PrimaryKeyColumn",
      "enum": null,
      "fallback": [Function],
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "uuid",
    },
    {
      "decorator": "CreateDateColumn",
      "enum": null,
      "fallback": [Function],
      "key": "createdAt",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "date",
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": "TestRelationFour",
    "namespace": null,
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "primaryKeys": [
    "id",
  ],
  "primarySource": null,
  "relations": [
    {
      "findKeys": {
        "id": "customFourId",
      },
      "foreignConstructor": [Function],
      "foreignKey": "four",
      "joinKeys": {
        "customFourId": "id",
      },
      "joinTable": null,
      "key": "one",
      "options": {
        "loading": "ignore",
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "type": "OneToOne",
    },
  ],
  "schemas": [],
  "target": [Function],
}
`;

exports[`GlobalEntityMetadata get should return metadata for TestRelationOne 1`] = `
{
  "columns": [
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "name",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "string",
    },
    {
      "decorator": "PrimaryKeyColumn",
      "enum": null,
      "fallback": [Function],
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "uuid",
    },
    {
      "decorator": "CreateDateColumn",
      "enum": null,
      "fallback": [Function],
      "key": "createdAt",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "date",
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": "TestRelationOne",
    "namespace": null,
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "primaryKeys": [
    "id",
  ],
  "primarySource": null,
  "relations": [
    {
      "findKeys": {
        "customOneId": "id",
      },
      "foreignConstructor": [Function],
      "foreignKey": "one",
      "joinKeys": null,
      "joinTable": null,
      "key": "twos",
      "options": {
        "loading": "ignore",
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "type": "OneToMany",
    },
    {
      "findKeys": {
        "customFourId": "id",
      },
      "foreignConstructor": [Function],
      "foreignKey": "one",
      "joinKeys": null,
      "joinTable": null,
      "key": "four",
      "options": {
        "loading": "ignore",
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "type": "OneToOne",
    },
    {
      "findKeys": {
        "testRelationOneId": "id",
      },
      "foreignConstructor": [Function],
      "foreignKey": "ones",
      "joinKeys": {
        "testRelationOneId": "id",
      },
      "joinTable": "test_relation_one_x_test_relation_five",
      "key": "fives",
      "options": {
        "loading": "ignore",
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "type": "ManyToMany",
    },
    {
      "findKeys": {
        "sourceTestRelationOneId": "id",
      },
      "foreignConstructor": [Function],
      "foreignKey": "many",
      "joinKeys": {
        "sourceTestRelationOneId": "id",
        "targetTestRelationOneId": "id",
      },
      "joinTable": "test_relation_one_x_test_relation_one",
      "key": "many",
      "options": {
        "loading": "ignore",
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "type": "ManyToMany",
    },
  ],
  "schemas": [],
  "target": [Function],
}
`;

exports[`GlobalEntityMetadata get should return metadata for TestRelationThree 1`] = `
{
  "columns": [
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "name",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "string",
    },
    {
      "decorator": "PrimaryKeyColumn",
      "enum": null,
      "fallback": [Function],
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "uuid",
    },
    {
      "decorator": "CreateDateColumn",
      "enum": null,
      "fallback": [Function],
      "key": "createdAt",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "date",
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": "TestRelationThree",
    "namespace": null,
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "primaryKeys": [
    "id",
  ],
  "primarySource": null,
  "relations": [
    {
      "findKeys": {
        "first": "twoFirst",
        "second": "twoSecond",
      },
      "foreignConstructor": [Function],
      "foreignKey": "threes",
      "joinKeys": {
        "twoFirst": "first",
        "twoSecond": "second",
      },
      "joinTable": null,
      "key": "two",
      "options": {
        "loading": "ignore",
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "type": "ManyToOne",
    },
  ],
  "schemas": [],
  "target": [Function],
}
`;

exports[`GlobalEntityMetadata get should return metadata for TestRelationTwo 1`] = `
{
  "columns": [
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "first",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "string",
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "second",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "string",
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "name",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "string",
    },
    {
      "decorator": "Column",
      "enum": null,
      "fallback": null,
      "key": "customOneId",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": false,
      "schema": null,
      "type": "string",
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": "TestRelationTwo",
    "namespace": null,
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "primaryKeys": [
    "first",
    "second",
  ],
  "primarySource": null,
  "relations": [
    {
      "findKeys": {
        "id": "customOneId",
      },
      "foreignConstructor": [Function],
      "foreignKey": "twos",
      "joinKeys": {
        "customOneId": "id",
      },
      "joinTable": null,
      "key": "one",
      "options": {
        "loading": "ignore",
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "type": "ManyToOne",
    },
    {
      "findKeys": {
        "twoFirst": "first",
        "twoSecond": "second",
      },
      "foreignConstructor": [Function],
      "foreignKey": "two",
      "joinKeys": null,
      "joinTable": null,
      "key": "threes",
      "options": {
        "loading": "ignore",
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "type": "OneToMany",
    },
  ],
  "schemas": [],
  "target": [Function],
}
`;
